--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "license": "ISC",
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "eslint": "^7.13.0",
     "jest": "^26.6.3",
     "nodemon": "^2.0.6",
